@@ -83,3 +83,7 @@ Section "Screen"
 	EndSubSection
 EndSection
 
+Section "ServerLayout"
+EndSection
+#Section "ServerLayout"
+#EndSection
