@@ -3,6 +3,8 @@ update-manager (1:0.95.3) jaunty; urgency=low
   * DistUpgrade/DistUpgradeQuirks.py: 
     - check the supprot of fglrx against the current
       PCI card (LP: #284408)
+  * DistUpgrade/xorg_fix_intrepid.py:
+    - do not rewrite multiseat configs (LP: #292774)
 
  --
 
